<package>
  <name>swarm</name>
  <version>0.2.2</version>
  <description>
    Swarm Simulation
  </description>
  <maintainer email="ogiovanniruiz@gmail.com">Oscar Ruiz</maintainer>
  <license>BSD</license>

  <author email="ogiovanniruiz@gmail.com">Oscar Ruiz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>joy</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>costmap_2d</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>global_planner</run_depend>
  <run_depend>nav_core</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>eband_local_planner</run_depend>
  <run_depend>dwa_local_planner</run_depend>
  <run_depend>turtlebot_bringup</run_depend>
  <run_depend>amcl</run_depend>

</package>
